--- a/vcpkg/pack.bat.in
+++ b/vcpkg/pack.bat.in
@@ -1,5 +1,11 @@
 REM Requires PATH to point to vcpgk and nuget and NUGET_SOURCE defined to the nuget server url
 
+vcpkg.exe remove libmodbus:x86-windows libmodbus:x64-windows
+IF ERRORLEVEL 1 GOTO End
+
+vcpkg.exe install libmodbus:x86-windows libmodbus:x64-windows --head
+IF ERRORLEVEL 1 GOTO End
+
 vcpkg.exe export libmodbus:x86-windows libmodbus:x64-windows --nuget --nuget-id="libmodbus" --nuget-version="@LIBMODBUS_VERSION@"
 IF ERRORLEVEL 1 GOTO End
 
