--- a/vcpkg/pack.bat.in
+++ b/vcpkg/pack.bat.in
@@ -9,7 +9,7 @@ IF ERRORLEVEL 1 GOTO End
 vcpkg.exe export libmodbus:x86-windows libmodbus:x64-windows --nuget --nuget-id="libmodbus" --nuget-version="@LIBMODBUS_VERSION@"
 IF ERRORLEVEL 1 GOTO End
 
-NuGet.exe push .build\*.nupkg -Source %NUGET_SOURCE%
+NuGet.exe push %VCPGK_PATH%\libmodbus.@LIBMODBUS_VERSION@.nupkg -Source %NUGET_SOURCE%
 IF ERRORLEVEL 1 GOTO End
 
 :End
