feat: Add support for clang on windows.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,7 +63,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     $<BUILD_INTERFACE:${src}> $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}>
     $<INSTALL_INTERFACE:include>)
 
-target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<C_COMPILER_ID:MSVC>:DLLBUILD;_CRT_SECURE_NO_WARNINGS;_WINSOCK_DEPRECATED_NO_WARNINGS>)
+target_compile_definitions(${PROJECT_NAME} PRIVATE $<$<OR:$<C_COMPILER_ID:MSVC>,$<AND:$<C_COMPILER_ID:Clang>,$<PLATFORM_ID:Windows>>>:DLLBUILD;_CRT_SECURE_NO_WARNINGS;_WINSOCK_DEPRECATED_NO_WARNINGS>)
 target_link_libraries(${PROJECT_NAME} PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32>)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${LIBMODBUS_PUBLIC_HEADERS}")
